--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.2"
+        "phpunit/phpunit": "~4.8"
     }
 }
