--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require": {
         "php": ">=5.5.9",
-        "guzzlehttp/guzzle": "^6.0"
+        "guzzlehttp/guzzle": "^5.3|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8"
