--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,8 @@ matrix:
 notifications:
   email: false
 
+before_install:
+  - if [ "$GUZZLE_VERSION" != "" ]; then composer require "guzzlehttp/guzzle:${GUZZLE_VERSION}" --no-update; fi;
+
 install:
    composer install --no-interaction --prefer-dist
