--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ notifications:
 
 before_install:
   - if [ "$GUZZLE_VERSION" != "" ]; then composer require "guzzlehttp/guzzle:${GUZZLE_VERSION}" --no-update; fi;
+  - php -S localhost:8000 tests/Server.php
 
 install:
    composer install --no-interaction --prefer-dist
