--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ notifications:
 
 before_install:
   - if [ "$GUZZLE_VERSION" != "" ]; then composer require "guzzlehttp/guzzle:${GUZZLE_VERSION}" --no-update; fi;
-  - nohup php -S localhost:8000 tests/Server.php > /dev/null 2>&1 &
+  - nohup php -S localhost:8000 Server.php > /dev/null 2>&1 &
 
 install:
    composer install --no-interaction --prefer-dist
