Fix my mistake on allow failures and add nightly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ matrix:
     - php: nightly
       env: GUZZLE_VERSION=^6.0
   allow_failures:
-    - hhvm
+    - php: hhvm
+    - php: nightly
 
 notifications:
   email: false
