--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "MagnesiumOxide\\TwitchApi\\": "tests"
+            "MagnesiumOxide\\TwitchApi\\Tests\\": "tests",
+            "MagnesiumOxide\\TwitchApi\\Tests\\Models\\": "tests/model"
         }
     },
     "require": {
